[build-system]
requires      = ["setuptools~=67.6", "wheel~=0.40.0"]
build-backend = "setuptools.build_meta"


[project]
name        = "datoso"
description = "Python command line tool to download and organize your Rom Dat files."
readme      = "README.md"
requires-python = ">=3.10"
license     = {text = "MIT License"}
authors     = [
    {name = 'Lacides Miranda', email = 'laromicas@hotmail.com'},
]
keywords = ["emulators", "roms"]
classifiers = [
    'Development Status :: 4 - Beta',
    "Environment :: Console",
    'License :: OSI Approved :: MIT License',
    "Operating System :: POSIX :: Linux",
    'Programming Language :: Python :: 3',
    'Topic :: System :: Emulators',
    'Topic :: System :: Archiving',
]
dependencies = [
    "tinydb>=4.7.1",
    "pydantic==1.10.9",
    "python-dateutil>=2.8.2",
    "xmltodict>=0.13.0",
    "tabulate>=0.9.0",
    "requests>=2.31.0",
]
dynamic = ["version"]


[project.optional-dependencies]
all = [
    "datoso-seed-fbneo>=0.3.3",
    "datoso-seed-md-enhanced>=0.3.0",
    "datoso-seed-nointro>=0.3.0",
    "datoso-seed-pleasuredome>=0.3.2",
    "datoso-seed-redump>=0.3.1",
    "datoso-seed-sfc-enhancedcolors>=0.3.0",
    "datoso-seed-sfc-msu1>=0.3.0",
    "datoso-seed-sfc-speedhacks>=0.3.0",
    "datoso-seed-translatedenglish>=0.3.1",
    "datoso-seed-vpinmame>=0.3.0",
    ]
fbneo = [ "datoso-seed-fbneo>=0.3.3" ]
md-enhanced = [ "datoso-seed-md-enhanced>=0.3.0" ]
nointro = [ "datoso-seed-nointro>=0.3.0" ]
pleasuredome = [ "datoso-seed-pleasuredome>=0.3.2" ]
redump = [ "datoso-seed-redump>=0.3.1" ]
sfc-enhancedcolors = [ "datoso-seed-sfc-enhancedcolors>=0.3.0" ]
sfc-msu1 = [ "datoso-seed-sfc-msu1>=0.3.0" ]
sfc-speedhacks = [ "datoso-seed-sfc-speedhacks>=0.3.0" ]
translatedenglish = [ "datoso-seed-translatedenglish>=0.3.1" ]
vpinmame = [ "datoso-seed-vpinmame>=0.3.0" ]
dev = [
    "ruff>=0.0.272",
    "line_profiler==4.0.3"
    ]

[project.urls]
"Source Code"       = "https://github.com/laromicas/datoso"

[project.scripts]
datoso = "datoso.__main__:main"

[tool.setuptools]
packages = [
    "datoso",
    "datoso.actions",
    "datoso.commands",
    "datoso.configuration",
    "datoso.helpers",
    "datoso.repositories",
    "datoso.seeds"
    ]
license-files = ["LICENSE"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "datoso.__version__"}

[tool.ruff]
extend-select = ["C4", "SIM", "TCH"]
ignore = []
fixable = ["F541"]
# fixable = ["A", "ANN", "ARG", "B", "BLE", "C", "COM", "D", "DTZ", "E", "EM", "ERA", "EXE", "F", "FBT", "G", "I", "ICN", "INP", "ISC", "N", "PD", "PGH", "PIE", "PL", "PT", "PTH", "Q", "RET", "RUF", "S", "SIM", "T", "TCH", "TID", "TRY", "UP", "W", "YTT"]
line-length = 120
show-fixes = true
target-version = "py310"
ignore-init-module-imports = true

# TODO Maybe change license to "BSD 3-Clause License"
