[build-system]
requires      = ["setuptools~=67.6", "wheel~=0.40.0"]
build-backend = "setuptools.build_meta"


[project]
name        = "datoso"
description = "Python command line tool to download and organize your Rom Dat files."
readme      = "README.md"
requires-python = ">=3.11"
license     = {text = "MIT License"}
authors     = [
    {name = 'Lacides Miranda', email = 'laromicas@hotmail.com'},
]
keywords = ["emulators", "roms"]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    "Environment :: Console",
    'License :: OSI Approved :: MIT License',
    "Operating System :: POSIX :: Linux",
    'Programming Language :: Python :: 3',
    'Topic :: System :: Emulators',
    'Topic :: System :: Archiving',
]
dependencies = [
    "dataclasses-json>=0.6.4",
    "pydantic==1.10.9",
    "python-dateutil>=2.8.2",
    "requests>=2.31.0",
    "rich>=14.0.0",
    "tabulate>=0.9.0",
    "tinydb>=4.7.1",
    "xmltodict>=0.13.0",
]
dynamic = ["version"]
#dev-dependencies
# [
#     "ruff>=0.6.3",
#     "line_profiler==4.1.3"
#     ]


[project.optional-dependencies]
all = [
    "datoso-seed-fbneo>=1.0.2",
    "datoso-seed-enhanced>=1.1.0",
    "datoso-seed-nointro>=1.1.1",
    "datoso-seed-pleasuredome>=1.1.1",
    "datoso-seed-redump>=1.0.1",
    "datoso-seed-tdc>=1.1.0",
    "datoso-seed-translatedenglish>=1.1.1",
    "datoso-seed-vpinmame>=1.0.2",
    ]
fbneo = [ "datoso-seed-fbneo>=1.0.2" ]
enhanced = [ "datoso-seed-enhanced>=1.1.0" ]
nointro = [ "datoso-seed-nointro>=1.1.1" ]
pleasuredome = [ "datoso-seed-pleasuredome>=1.1.1" ]
redump = [ "datoso-seed-redump>=1.0.1" ]
tdc = [ "datoso-seed-tdc>=1.1.0" ]
translatedenglish = [ "datoso-seed-translatedenglish>=1.1.1" ]
vpinmame = [ "datoso-seed-vpinmame>=1.0.2" ]
dev = [
    # code quality
    "ruff>=0.6.3",
    "line_profiler==4.1.3",
    # documentation
    "sphinx>=8.0.0",
    "sphinx-rtd-theme>=3.0.0",
    "setuptools"
    ]
test = [
    # test
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.0",
]

[project.urls]
"Source Code"       = "https://github.com/laromicas/datoso"

[project.scripts]
datoso = "datoso.__main__:main"

[tool.setuptools]
packages = [
    "datoso",
    "datoso.actions",
    "datoso.commands",
    "datoso.configuration",
    "datoso.helpers",
    "datoso.repositories",
    "datoso.seeds"
    ]
license-files = ["LICENSE"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "datoso.__version__"}
